# rbsim

./: 1.txt  AGENT.md  AGENTS.md  README.md  answer-to-1.txt  pyproject.toml  results.db  results.db-
data/: session.py
riftbound/ai/heuristics/: base_agent.py  simple_agent.py  simple_aggro.py  simple_control.py
riftbound/cli/: main.py
riftbound/core/: battlefield.py  cards.py  cards_registry.py  combat.py  effects.py  enums.py  loop.py  models.py  player.py  state.py
riftbound/data/: analytics.py  schema.py  writer.py
riftbound/data/cards/core/: gear.json  spell.json  unit.json
riftbound_sim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_analytics.py  test_cards_registry.py  test_combat.py  test_effect_context.py  test_hold_conquer.py  test_rune_system.py
