[project]
name = "riftbound-sim"
version = "0.1.0"
description = "A simulation framework for Riftbound TCG matchups"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.3",
    "pydantic>=2.8.2",
    "sqlalchemy>=2.0.35",
]

[project.scripts]
rbsim = "riftbound.cli.main:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
# no special config needed, this just keeps uv happy
